--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.1",
+    "@mui/x-charts": "^8.8.0",
+    "@mui/x-data-grid": "^8.8.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
