--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-charts": "^8.8.0",
     "@mui/x-data-grid": "^8.8.0",
     "canvas": "^3.1.2",
+    "cohere-ai": "^7.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
